Added Wire.ByOffsetArea. Bumped to v0.7.63
Added Wire.ByOffsetArea
Several bug fixes and robustness checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ dynamic = ["version"]
 authors = [
   { name="Wassim Jabi", email="wassim.jabi@gmail.com" },
 ]
-description = "An Advanced Spatial Modelling and Analysis Software Library for Architecture, Engineering, and Construction."
+description = "An AI-Powered Spatial Modelling and Analysis Software Library for Architecture, Engineering, and Construction."
 readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = '>=3.8, <3.14'
