WIP use pixi for env management and add CI + tutorials - use pixi to manage multi-environments. This allows for a more complete dev env that has the extra dependencies required to run the notebooks - add a quarto project to tutorials (proof-of-concept) - add GH CI to execute and build tutorials and host on GH pages

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@
 *.lock
 *.vsidx
 *.sqlite
+# pixi environments
+.pixi/*
+!.pixi/config.toml
+EnergyModels/**
+build/**
+notebooks/.ipynb_checkpoints/**
+tutorials/.ipynb_checkpoints/**
+notebooks/iframe_figures/**
+tutorials/iframe_figures/**
+src/topologicpy.egg-info/**
+tutorials/_site/**
