--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 description = "An AI-Powered Spatial Modelling and Analysis Software Library for Architecture, Engineering, and Construction."
 readme = "README.md"
 license = {file = "LICENSE"}
-requires-python = '>=3.8, <3.15'
+requires-python = '>=3.8, <3.12'
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
@@ -53,3 +53,47 @@ addopts = "-nauto --strict-markers --strict-config -v"
 # to be defined and raise on invalid config values
 # treat xpasses as test failures so they get converted to regular tests as soon as possible
 xfail_strict = true
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.pypi-dependencies]
+topologicpy = { path = ".", editable = true }
+
+[tool.pixi.environments]
+default = { solve-group = "default" }
+test = { features = ["test"], solve-group = "default" }
+dev = { features = ["dev"], solve-group = "default" }
+
+[tool.pixi.feature.dev.dependencies]
+pytest-xdist = ">=2.4.0,<3.0.0"
+jupyterlab = "*"
+ipywidgets = "*"
+plotly = "*"
+networkx = "*"
+tqdm = "*"
+quarto = "*"
+
+[tool.pixi.feature.dev.pypi-dependencies]
+openstudio = "*"
+honeybee = "*"
+honeybee-energy = "*"
+honeybee-radiance = "*"
+ladybug = "*"
+ladybug-geometry = "*"
+# TODO: consider using lbt-honeybee as a catch all installing all honeybee deps
+jupyterlab-quarto = "*"
+
+[tool.pixi.tasks]
+open-tutorials = {cmd="/mnt/c/windows/explorer.exe index.html", cwd="tutorials/_site"} # this will only work on WSL
+download-openstudio = {cmd="wget https://github.com/NREL/OpenStudio/releases/download/v3.10.0/OpenStudio-3.10.0+86d7e215a1-Ubuntu-24.04-x86_64.deb", cwd="build"}
+install-openstudio = { cmd = "sudo dpkg -i ./OpenStudio-3.10.0+86d7e215a1-Ubuntu-24.04-x86_64.deb" , cwd="build", depends-on = ["download-openstudio"]}
+
+[tool.pixi.feature.dev.tasks]
+lab = { cmd="jupyter lab", cwd = "notebooks" }
+lab-tutorials = { cmd="jupyter lab", cwd = "tutorials" }
+test-energy = "pytest tests/test_16EnergyModel.py"
+tutorials = { cmd= "quarto render .", cwd = "tutorials" }
+preview = { cmd= "quarto preview .", cwd = "tutorials" }
+
