--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 description = "An AI-Powered Spatial Modelling and Analysis Software Library for Architecture, Engineering, and Construction."
 readme = "README.md"
 license = {file = "LICENSE"}
-requires-python = '>=3.8, <3.12'
+requires-python = '>=3.8, <3.14'  # TODO
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
@@ -56,7 +56,7 @@ xfail_strict = true
 
 [tool.pixi.workspace]
 channels = ["conda-forge"]
-platforms = ["linux-64"]
+platforms = ["linux-64"] # NOTE: could add osx-64 and win-64 but that would require testing on those platforms and we don't have that setup yet
 
 [tool.pixi.pypi-dependencies]
 topologicpy = { path = ".", editable = true }
@@ -86,15 +86,17 @@ ladybug-geometry = "*"
 jupyterlab-quarto = "*"
 
 [tool.pixi.tasks]
+tests = "pytest"
 open-tutorials = {cmd="/mnt/c/windows/explorer.exe index.html", cwd="tutorials/_site"} # this will only work on WSL
-build-dir = {cmd="mkdir -p build", cwd="."}
-download-openstudio = {cmd="wget https://github.com/NREL/OpenStudio/releases/download/v3.10.0/OpenStudio-3.10.0+86d7e215a1-Ubuntu-24.04-x86_64.deb", cwd="build", depends-on = ["build-dir"]}
-install-openstudio = { cmd = "sudo dpkg -i ./OpenStudio-3.10.0+86d7e215a1-Ubuntu-24.04-x86_64.deb" , cwd="build", depends-on = ["download-openstudio"]}
+mk-build-dir = {cmd="mkdir -p build", cwd="."}
+download-openstudio-ubuntu = { cmd = "wget https://github.com/NREL/OpenStudio/releases/download/v3.10.0/OpenStudio-3.10.0+86d7e215a1-Ubuntu-24.04-x86_64.deb", cwd="build", depends-on = ["mk-build-dir"]}
+install-openstudio-ubuntu = { cmd = "sudo dpkg -i ./OpenStudio-3.10.0+86d7e215a1-Ubuntu-24.04-x86_64.deb" , cwd="build", depends-on = ["download-openstudio-ubuntu"]}
 
 [tool.pixi.feature.dev.tasks]
 lab = { cmd="jupyter lab", cwd = "notebooks" }
 lab-tutorials = { cmd="jupyter lab", cwd = "tutorials" }
 test-energy = "pytest tests/test_16EnergyModel.py"
+del-tutorials = { cmd="rm -rf _site", cwd = "tutorials" }
 tutorials = { cmd= "quarto render .", cwd = "tutorials" }
 preview = { cmd= "quarto preview .", cwd = "tutorials" }
 
