make some notebooks .qmd. this ensure they are executed and also demos benefit of text only file.

--- a/tutorials/_quarto.yml
+++ b/tutorials/_quarto.yml
@@ -11,8 +11,8 @@ website:
     search: true
     style: "docked"
     contents:
-      - Building_Tower.ipynb
-      - EnergyModel.ipynb
+      - Building_Tower.qmd
+      - EnergyModel.qmd
       - MEP.ipynb
 
     # TODO: add API reference using quartodoc?
